Update exercise intros.

--- a/slides/html/1-getting_started_with_pandas.slides.html
+++ b/slides/html/1-getting_started_with_pandas.slides.html
@@ -17689,7 +17689,7 @@ Name: 16392, dtype: object</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Up-Next:-Data-Wrangling">Up Next: Data Wrangling<a class="anchor-link" href="#Up-Next:-Data-Wrangling">&#182;</a></h2><p>Let's take a 10-minute break for some exercises to check your understanding:</p>
+<h2 id="Up-Next:-Data-Wrangling">Up Next: Data Wrangling<a class="anchor-link" href="#Up-Next:-Data-Wrangling">&#182;</a></h2><p>Let's take a break for some exercises to check your understanding:</p>
 <ol>
 <li>Create a DataFrame by reading in the <code>2019_Yellow_Taxi_Trip_Data.csv</code> file.</li>
 <li>Find the dimensions (number of rows and number of columns) in the data.</li>
