--- a/slides/html/2-data_wrangling.slides.html
+++ b/slides/html/2-data_wrangling.slides.html
@@ -20779,7 +20779,7 @@ jp-needs-light-background
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Up-Next:-Data-Visualization">Up Next: Data Visualization<a class="anchor-link" href="#Up-Next:-Data-Visualization">&#182;</a></h2><p>Let's take a 25-minute break for some exercises to check your understanding:</p>
+<h2 id="Up-Next:-Data-Visualization">Up Next: Data Visualization<a class="anchor-link" href="#Up-Next:-Data-Visualization">&#182;</a></h2><p>Let's take a break for some exercises to check your understanding:</p>
 <ol>
 <li>Read in the meteorite data from the <code>Meteorite_Landings.csv</code> file.</li>
 <li>Rename the <code>mass (g)</code> column to <code>mass</code>, and drop all the latitude and longitude columns.</li>
