--- a/slides/html/3-data_visualization.slides.html
+++ b/slides/html/3-data_visualization.slides.html
@@ -15671,7 +15671,7 @@ jp-needs-light-background
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Up-Next:-Hands-On-Data-Analysis-Lab">Up Next: Hands-On Data Analysis Lab<a class="anchor-link" href="#Up-Next:-Hands-On-Data-Analysis-Lab">&#182;</a></h2><p>Let's take a 15-minute break for some exercises to check your understanding:</p>
+<h2 id="Up-Next:-Hands-On-Data-Analysis-Lab">Up Next: Hands-On Data Analysis Lab<a class="anchor-link" href="#Up-Next:-Hands-On-Data-Analysis-Lab">&#182;</a></h2><p>Let's take a break for some exercises to check your understanding:</p>
 <ol>
 <li>Create box plots of TSA traveler throughput for each year in the data. Hint: Pass <code>kind='box'</code> into the <code>plot()</code> method to generate box plots.</li>
 <li>Using Seaborn, create a heatmap that shows the 2019 TSA median traveler throughput by day of week and month. Hint: Make a pivot table first.</li>
