--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -17760,7 +17760,7 @@ Name: 16392, dtype: object</pre>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Up-Next:-Data-Wrangling">Up Next: Data Wrangling<a class="anchor-link" href="#Up-Next:-Data-Wrangling">&#182;</a></h2><p>Let's take a 10-minute break for some exercises to check your understanding:</p>
+<h2 id="Up-Next:-Data-Wrangling">Up Next: Data Wrangling<a class="anchor-link" href="#Up-Next:-Data-Wrangling">&#182;</a></h2><p>Let's take a break for some exercises to check your understanding:</p>
 <ol>
 <li>Create a DataFrame by reading in the <code>2019_Yellow_Taxi_Trip_Data.csv</code> file.</li>
 <li>Find the dimensions (number of rows and number of columns) in the data.</li>
@@ -24373,7 +24373,7 @@ jp-needs-light-background
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Up-Next:-Data-Visualization">Up Next: Data Visualization<a class="anchor-link" href="#Up-Next:-Data-Visualization">&#182;</a></h2><p>Let's take a 25-minute break for some exercises to check your understanding:</p>
+<h2 id="Up-Next:-Data-Visualization">Up Next: Data Visualization<a class="anchor-link" href="#Up-Next:-Data-Visualization">&#182;</a></h2><p>Let's take a break for some exercises to check your understanding:</p>
 <ol>
 <li>Read in the meteorite data from the <code>Meteorite_Landings.csv</code> file.</li>
 <li>Rename the <code>mass (g)</code> column to <code>mass</code>, and drop all the latitude and longitude columns.</li>
@@ -26301,7 +26301,7 @@ jp-needs-light-background
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h2 id="Up-Next:-Hands-On-Data-Analysis-Lab">Up Next: Hands-On Data Analysis Lab<a class="anchor-link" href="#Up-Next:-Hands-On-Data-Analysis-Lab">&#182;</a></h2><p>Let's take a 15-minute break for some exercises to check your understanding:</p>
+<h2 id="Up-Next:-Hands-On-Data-Analysis-Lab">Up Next: Hands-On Data Analysis Lab<a class="anchor-link" href="#Up-Next:-Hands-On-Data-Analysis-Lab">&#182;</a></h2><p>Let's take a break for some exercises to check your understanding:</p>
 <ol>
 <li>Create box plots of TSA traveler throughput for each year in the data. Hint: Pass <code>kind='box'</code> into the <code>plot()</code> method to generate box plots.</li>
 <li>Using Seaborn, create a heatmap that shows the 2019 TSA median traveler throughput by day of week and month. Hint: Make a pivot table first.</li>
