--- a/slides/html/2-data_wrangling.slides.html
+++ b/slides/html/2-data_wrangling.slides.html
@@ -6,11 +6,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 
-
-<title>2-data_wrangling slides</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Introduction to Data Analysis Using Pandas 2-data_wrangling slides &ndash; Stefanie Molin</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 <!-- General and theme style sheets -->
 <link rel="stylesheet" href="https://unpkg.com/reveal.js@4.0.2/dist/reveal.css">
+<!-- Reveal Theme -->
 <link rel="stylesheet" href="https://unpkg.com/reveal.js@4.0.2/dist/theme/simple.css" id="theme">
 
 <!-- If the query includes 'print-pdf', include the PDF print sheet -->
@@ -22,42 +22,6 @@ if( window.location.search.match( /print-pdf/gi ) ) {
         document.getElementsByTagName( 'head' )[0].appendChild( link );
 }
 </script>
-
-<!-- Loading the mathjax macro -->
-<!-- Load mathjax -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
-    <!-- MathJax configuration -->
-    <script type="text/x-mathjax-config">
-    init_mathjax = function() {
-        if (window.MathJax) {
-        // MathJax loaded
-            MathJax.Hub.Config({
-                TeX: {
-                    equationNumbers: {
-                    autoNumber: "AMS",
-                    useLabelIds: true
-                    }
-                },
-                tex2jax: {
-                    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-                    displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-                    processEscapes: true,
-                    processEnvironments: true
-                },
-                displayAlign: 'center',
-                CommonHTML: {
-                    linebreaks: { 
-                    automatic: true 
-                    }
-                }
-            });
-        
-            MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
-        }
-    }
-    init_mathjax();
-    </script>
-    <!-- End of mathjax configuration -->
 
 <style type="text/css">
     pre { line-height: 125%; }
@@ -14509,16 +14473,23 @@ a.anchor-link {
    display: none;
 }
 .highlight  {
-    margin: 0.4em;
+    margin: 0.4em 0.4em 0em !important;
 }
 .jp-Notebook {
     padding: 0;
 }
+.jp-RenderedHTMLCommon {
+    overflow-y: hidden !important;
+}
+.CodeMirror pre {
+    padding: 0.4em !important;
+    overflow-x: scroll !important; /* allow scrolling to see full code block */
+}
 :root {
-    --jp-ui-font-size1: 20px;       /* instead of 14px */
-    --jp-content-font-size1: 20px;  /* instead of 14px */
-    --jp-code-font-size: 19px;      /* instead of 13px */
-    --jp-cell-prompt-width: 110px;  /* instead of 64px */
+    --jp-ui-font-size1: 11.5px;       /* size of tables in outputs */
+    --jp-content-font-size1: 19px;  /* base size of text */
+    --jp-code-font-size: 15.2px;      /* size of code */
+    --jp-cell-prompt-width: 110px;  /* width of In[] labels */
 }
 @media print {
   body {
@@ -14531,6 +14502,9 @@ a.anchor-link {
 /* Overrides of notebook CSS for static HTML export */
 .reveal {
   font-size: 160%;
+}
+.reveal table {
+  font-size: var(--jp-ui-font-size1);
 }
 .reveal pre {
   width: inherit;
@@ -14573,6 +14547,23 @@ div.output_area pre {
 div.jp-OutputPrompt {
   /* 5px right shift to account for margin in parent container */
   margin: 5px 5px 0 0;
+}
+
+.reveal div.highlight {
+  margin: 0;
+}
+
+.reveal div.highlight > pre {
+  margin: 0;
+  width: 100%;
+  font-size: var(--jp-code-font-size);
+}
+
+.reveal div.jp-OutputArea-output > pre {
+  margin: 0;
+  width: 90%;
+  font-size: var(--jp-code-font-size);
+  box-shadow: none;
 }
 
 /* Reveal navigation controls */
@@ -14630,12 +14621,45 @@ div.jp-OutputPrompt {
 }
 </style>
 
-</head>
+<!-- Load mathjax -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS_CHTML-full,Safe"> </script>
+    <!-- MathJax configuration -->
+    <script type="text/x-mathjax-config">
+    init_mathjax = function() {
+        if (window.MathJax) {
+        // MathJax loaded
+            MathJax.Hub.Config({
+                TeX: {
+                    equationNumbers: {
+                    autoNumber: "AMS",
+                    useLabelIds: true
+                    }
+                },
+                tex2jax: {
+                    inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+                    displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+                    processEscapes: true,
+                    processEnvironments: true
+                },
+                displayAlign: 'center',
+                CommonHTML: {
+                    linebreaks: { 
+                    automatic: true 
+                    }
+                }
+            });
+        
+            MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
+        }
+    }
+    init_mathjax();
+    </script>
+    <!-- End of mathjax configuration --></head>
 
 <body class="jp-Notebook" data-jp-theme-light="true" data-jp-theme-name="JupyterLab Light">
 
 <div class="reveal">
-<div class="footer" style="padding: 4px;">
+<div class="footer" style="padding: 4px; font-size: 22px;">
     Introduction to Data Analysis Using Pandas &ndash; Stefanie Molin
     <div style="float: right; margin-top: -18px;">
         <a href="https://mybinder.org/v2/gh/stefmolin/pandas-workshop/main?urlpath=lab" style="z-index: 1;" target="_blank" rel="noopener noreferrer">
@@ -21688,6 +21712,11 @@ Name: year, dtype: float64</pre>
 </body>
 
 
+
+
+
+
+
 <script>
 require(
     {
@@ -21696,16 +21725,20 @@ require(
       waitSeconds: 15
     },
     [
-      "https://unpkg.com/reveal.js@4.0.2/dist/reveal.js"
+      "https://unpkg.com/reveal.js@4.0.2/dist/reveal.js",
+      "https://unpkg.com/reveal.js@4.0.2/plugin/notes/notes.js"
     ],
 
-    function(Reveal){
+    function(Reveal, RevealNotes){
         // Full list of configuration options available here: https://github.com/hakimel/reveal.js#configuration
         Reveal.initialize({
             controls: true,
             progress: true,
+            slideNumber: "",
+            pdfSeparateFragments: false,
             history: true,
             transition: "slide",
+            plugins: [RevealNotes]
         });
 
         var update = function(event){
@@ -21717,17 +21750,15 @@ require(
         Reveal.addEventListener('slidechanged', update);
 
         function setScrollingSlide() {
-            var scroll = false
-            if (scroll === true) {
-              var h = $('.reveal').height() * 0.95;
-              $('section.present').find('section')
-                .filter(function() {
-                  return $(this).height() > h;
-                })
-                .css('height', 'calc(95vh)')
-                .css('overflow-y', 'scroll')
-                .css('margin-top', '20px');
-            }
+            let scale = 100;
+            let h = $('.reveal').height() * scale / 100;
+            $('section.present').find('section')
+              .filter(function() {
+                return $(this).height() > h;
+              })
+              .css('height', 'calc(' + scale + 'vh)') // sets height to scale percent of the viewport height (vh)
+              .css('overflow', 'scroll')
+              .css('margin-top', '20px');
         }
 
         // check and set the scrolling slide every time the slide change
