--- a/slides/html/1-getting_started_with_pandas.slides.html
+++ b/slides/html/1-getting_started_with_pandas.slides.html
@@ -18265,7 +18265,7 @@ require(
 
               if (slide.context.location.search.includes('controls=false')) {
                 // scroll presenter view to see fragments that will be coming up
-                slide.scrollTop($('section.present')[0].scrollHeight);
+                slide.scrollTop($('section.present')[0].scrollHeight / 2);
               }
             } else {
               slide
