Add resource on magics.

--- a/slides/html/workshop.slides.html
+++ b/slides/html/workshop.slides.html
@@ -27343,6 +27343,18 @@ Name: year, dtype: float64</pre>
 </div>
 </div>
 
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p><em>Tip: Read more about magics <a href="https://ipython.readthedocs.io/en/stable/interactive/magics.html">here</a>.</em></p>
+
+</div>
+</div>
+</div>
 </div></section><section>
 <div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
 <div class="jp-Cell-inputWrapper">
